src/style.css
@font-face {
    font-family: 'Poppins';
    src: url('./Poppins-Bold.ttf') format('truetype');
    font-weight: bold;
    font-style: normal;
}

@font-face {
    font-family: 'Poppins';
    src: url('./Poppins-Regular.ttf') format('truetype');
    font-weight: 400;
    font-style: normal;
}

@font-face {
    font-family: 'Poppins';
    src: url('./Poppins-Light.ttf') format('truetype');
    font-weight: 300;
    font-style: normal;
}

*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body{
    height: 100vh;
}

.content{
    display: grid;
    grid-template-rows: 100px 1fr 100px;
    height: 100%;
    background-color: #f0eef1;
    font-family: 'Poppins', sans-serif;
}

header{
    background-color: white;
    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px 0px;
    display: flex;
    justify-content: space-between;
    padding: 36px;
    align-items: center;
}

header .login{
    font-size: 18px;
    text-decoration: none;
    color: black;
    padding: 8px 16px;
    border-radius: 6px;
    border: 1px solid black;
    background-color: white;
}

header .login:hover{
    background-color: rgba(0, 0, 0, 0.16);
}

header .login:active {
    background-color: rgba(0, 0, 0, 0.16);
    box-shadow: 0 5px #555;
    transform: translateY(4px);
}

.maincontent{
    display: grid;
    grid-template-rows: 50px 1fr;
    gap: 20px;
    padding: 36px;
    margin-top: 5px;
}

.maincontent .new_project{
    width: 50px;
    border-radius: 50%;
    justify-self: center;
    font-size: 32px;
    border: 4px solid black;
    background-color: white;
}

.maincontent .new_project:hover{
    background-color: rgba(0, 0, 0, 0.16);
}

.maincontent .new_project:active {
    background-color: rgba(0, 0, 0, 0.16);
    box-shadow: 0 5px #555;
    transform: translateY(4px);
}

.maincontent .container{
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    gap: 16px;
}

.maincontent .card{
    width: 250px;
    padding: 20px;
    box-shadow: rgba(0, 0, 0, 0.16) 2px 2px 2px 2px;
    display: grid;
    gap: 8px;
}

.maincontent .card:hover{
    transform: translateY(-4px);
    box-shadow: rgba(0, 0, 0, 0.16) 5px 5px 5px 5px;
}

.maincontent .card .buttons{
    display: flex;
    justify-content: space-around;
    align-items: flex-end;
}

.maincontent .card button{
    width: 30px;
    height: 30px;
    border-radius: 50%;
    border: 2px solid #383838;
    font-size: 18px;
    font-weight: bold;
    background-color: white;
    color: #383838;
}

.maincontent .card button:hover{
    background-color: rgba(0, 0, 0, 0.16);
}

.maincontent .card button:active {
    background-color: rgba(0, 0, 0, 0.16);
    box-shadow: 0 3px #555;
    transform: translateY(4px);
}

.maincontent .container .card .title{
    font-weight: bold;
    font-size: 24px;
}

.maincontent .container .card .description{
    font-size: 14px;
    color: rgba(51, 51, 51, 0.667);
}

footer{
    background-color: white;
    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px 0px;
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 20px;
    
}

footer ul{
    list-style: none;
    display: flex;
    gap: 10px;
}

footer a{
    text-decoration: none;
    color: black;
}

footer a:hover{
    text-decoration: underline;
}

/*popout form overlay*/
.overlay-disabler {
    position: fixed; /* Positioning and size */
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    background-color: rgba(128,128,128,0.5); /* color */
    display: none; /* making it hidden by default */
}

/* The popup form - hidden by default */
.form-popup {
    display: none;
    position: fixed;
    top: 50vh;
    left: 50vw;
    transform: translate(-50%,-50%);
    border: 3px solid #f1f1f1;
    z-index: 9;
}

/* Add styles to the form container */
.form-container {
    max-width: 400px;
    max-height: min-content;
    padding: 10px;
    background-color: white;
}

/* Full-width input fields */
.form-container input[type=text], .form-container textarea, .form-container input[type=date]{
    width: 100%;
    padding: 15px;
    margin: 5px 0 16px 0;
    border: none;
    background: #f1f1f1;
    font-family: 'Poppins', sans-serif;
}
  
/* When the inputs get focus, do something */
.form-container input[type=text]:focus, .form-container textarea:focus, .form-container input[type=date]:focus{
    background-color: #ddd;
    outline: none;
}

/* enlarge details input field */ 
.form-container textarea{
    height: 100px;
    resize: none;
}

/* Set a style for the submit/login button */
.form-container .btn {
    background-color: #007e50;
    color: white;
    padding: 12px 16px;
    border: none;
    cursor: pointer;
    width: 100%;
    margin-bottom:10px;
    opacity: 0.7;
    border: 1px solid black;
    font-family: 'Poppins', sans-serif;
}

/* Add a red background color to the cancel button */
.form-container .cancel {
    background-color: rgb(153, 0, 0);
}

/* Add some hover effects to buttons */
.form-container .btn:hover, .open-button:hover {
    opacity: 1;
}

/* Set styles to the radio buttons */
.form-container input[type=radio]{
    padding: 15px;
    margin: 5px 0 12px 0;
}

